--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -75,6 +75,25 @@ th, td {
 	font-weight: 700;
 }
 
+.createButton {
+	margin-top: 1rem;
+	float: right;
+	border: none;
+	border-radius: 4px;
+	font-size: 1rem;
+	font-weight: bold;
+	padding: 0.25rem 1rem;
+	color: white;
+	outline: none;
+	cursor: pointer;
+	background: #22b8cf;
+}
+
+.createButton:hover {
+	background: #3bc9db;
+}
+
+
 @media ( max-width : 768px) {
 	th, td {
 		padding-left: 3px;
